--- a/doc/tex/capa.tex
+++ b/doc/tex/capa.tex
@@ -5,7 +5,7 @@
 		\large
 		\hspace*{0cm}Universidade de São Paulo \\
 		\hspace*{0cm}Instituto de Matemática e Estatística \\
-		\hspace*{0cm}MAC 5739 - Inteligência Artificial  \\
+		\hspace*{0cm}MAC 5778 - Sistemas Baseados em Conhecimento\\
 	\end{center}
 }
 
