--- a/slides/bibliography.bib
+++ b/slides/bibliography.bib
@@ -1,23 +1,51 @@
-@misc{ChapelGit,
-	author = {{Cray Inc.}} ,
-	title = {{Chapel-Lang}} ,
-	year = 2015 ,
-	url = {https://github.com/chapel-lang/chapel} ,
-	url-date = {2015-06-10}
+@article{BernersLee01,
+	author = {Tim Berners-Lee, James Hendler and Ora Lasilla},
+	title = {{The Semantic Web}},
+	journal = {Scientific American},
+	year = {2001} ,
+	url = {http://www-sop.inria.fr/acacia/cours/essi2006}
 }
 
-@misc{ChapelQuick,
-	author = {{Cray Inc.}} ,
-	title = {{Quick Reference}} ,
-	year = 2015 ,
-	url = {http://chapel.cray.com/spec/quickReference.pdf} ,
-	url-date = {2015-06-10}
+@article{Laskey08,
+	author = {Kathryn B. Laskey},
+	title = {{MEBN: A Language for First-ORder Bayesian Knowledge Bases}},
+	journal = {Artificial Intelligence},
+	year = {2008} ,
+	volume = {172}
 }
 
-@misc{ChapelOff,
-	author = {{Cray Inc.}} ,
-	title = {{Chapel Language Official Site}} ,
-	year = 2015 ,
-	url = {http://chapel.cray.com/tutorials.html} ,
-	url-date = {2015-06-10}
+@article{UnBBayes08,
+	author = {Rommel Carvalho, Laecio Santos, Show Matsumoto, Marcelo Ladeira, Paulo Costa},
+	title = {{UnBBayes-MEBN: Comments on Implementing a Probabilistic Ontology Tool}},
+	journal = {IADIS Applied Computing 2008 conference},
+	year = {2008}
 }
+
+@incollection{Rommel13,
+	year={2013},
+	isbn={978-3-642-35974-3},
+	booktitle={Uncertainty Reasoning for the Semantic Web II},
+	volume={7123},
+	series={Lecture Notes in Computer Science},
+	title={{Probabilistic Ontology and Knowledge Fusion for Procurement Fraud Detection in Brazil}},
+	url={http://dx.doi.org/10.1007/978-3-642-35975-0_2},
+	publisher={Springer Berlin Heidelberg},
+	author={Carvalho, RommelN. and Matsumoto, Shou and Laskey, KathrynB. and Costa, PauloC.G. and Ladeira, Marcelo and Santos, LaécioL.},
+	pages={19-40}
+}
+
+@MISC{Laskey11,
+    author = {Kathryn Blackmond Laskey and Richard Haberlin and Paulo Costa and Rommel Novaes Carvalho},
+    title = {{PR-OWL 2 Case Study: A Maritime Domain Probabilistic Ontology}},
+    year = {2011}
+}
+
+
+%@article{ maxmin,
+%  author = {Ioannis Tsamardinos and Laura E. Brown and Constantin F. Aliferis},
+%  title = {The max-min hill-climbing {B}ayesian network structure learning algorithm},
+%  journal = {Machine Learning},
+%  year = {2006},
+%  volume = {65},
+%  pages = {31-78}
+%}
