--- a/slides/slides.tex
+++ b/slides/slides.tex
@@ -7,9 +7,11 @@
 \input{./tex/capa}
 \input{./tex/content}
 \input{./tex/motivation}
-\input{./tex/definitions}
-\input{./tex/applications}
-\input{./tex/end}
-\input{./tex/capa}
+\input{./tex/ontology}
+\input{./tex/probontology}
+\begin{frame}[allowframebreaks]{Referências}
+	\bibliographystyle{plain}
+	\bibliography{bibliography.bib}
+\end{frame}
 
 \end{document}
