--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -1,37 +1,56 @@
-@misc{USPMaua15,
-	author = {{Denis Mauá}} ,
-	title = {{Bayesian Networks}} ,
-	year = 2015 ,
-	url = {http://paca.ime.usp.br/pluginfile.php/73722/mod_resource/content/2/basics.pdf} ,
-	url-date = {2015-06-03}
+@article{BernersLee01,
+	author = {Tim Berners-Lee, James Hendler and Ora Lasilla},
+	title = {{The Semantic Web}},
+	journal = {Scientific American},
+	year = {2001} ,
+	url = {http://www-sop.inria.fr/acacia/cours/essi2006}
 }
 
-@misc{LabIA15,
-  author = {{MAC5789 - PACA IME}},
-  title = {{Laboratório de Inteligência Artificial}},
-  year = 2015,
-  url = {http://paca.ime.usp.br/course/view.php?id=898},
-  urldate = {2015-05-20}
+@article{Laskey08,
+	author = {Kathryn B. Laskey},
+	title = {{MEBN: A Language for First-ORder Bayesian Knowledge Bases}},
+	journal = {Artificial Intelligence},
+	year = {2008} ,
+	volume = {172}
 }
 
-@misc{UCImain,
-  author = {{Center for Machine Learning and Intelligent Systems}},
-  title = {{UCI Machine Learning Repository}},
-  year = 2007,
-  url = {http://archive.ics.uci.edu/ml/index.html},
-  urldate = {2015-06-07}
+@article{UnBBayes08,
+	author = {Rommel Carvalho, Laecio Santos, Show Matsumoto, Marcelo Ladeira, Paulo Costa},
+	title = {{UnBBayes-MEBN: Comments on Implementing a Probabilistic Ontology Tool}},
+	journal = {IADIS Applied Computing 2008 conference},
+	year = {2008}
 }
 
-@misc{UCIadult96,
-  author = {{Barry Becker}},
-  title = {{Adult Data Set}},
-  year = 1996,
-  url = {http://archive.ics.uci.edu/ml/datasets/Adult},
-  urldate = {2015-06-07}
+@incollection{Rommel13,
+	year={2013},
+	isbn={978-3-642-35974-3},
+	booktitle={Uncertainty Reasoning for the Semantic Web II},
+	volume={7123},
+	series={Lecture Notes in Computer Science},
+	title={{Probabilistic Ontology and Knowledge Fusion for Procurement Fraud Detection in Brazil}},
+	url={http://dx.doi.org/10.1007/978-3-642-35975-0_2},
+	publisher={Springer Berlin Heidelberg},
+	author={Carvalho, RommelN. and Matsumoto, Shou and Laskey, KathrynB. and Costa, PauloC.G. and Ladeira, Marcelo and Santos, LaécioL.},
+	pages={19-40}
 }
 
-@book{Satisfiability09,
-	author = {{Victor W. Marek}} ,
-	title = {{Introduction to Mathematics of Satisfiability}} ,
-	year = {2009}
+@MISC{Laskey11,
+    author = {Kathryn Blackmond Laskey and Richard Haberlin and Paulo Costa and Rommel Novaes Carvalho},
+    title = {{PR-OWL 2 Case Study: A Maritime Domain Probabilistic Ontology}},
+    year = {2011}
 }
+
+@MISC{Costa10,
+    author = {Paulo C. G. da Costa and Kathryn Blackmond Laskey},
+    title = {Multi-Entity Bayesian Networks Without Multi-Tears},
+    year = {2010}
+}
+
+%@article{ maxmin,
+%  author = {Ioannis Tsamardinos and Laura E. Brown and Constantin F. Aliferis},
+%  title = {The max-min hill-climbing {B}ayesian network structure learning algorithm},
+%  journal = {Machine Learning},
+%  year = {2006},
+%  volume = {65},
+%  pages = {31-78}
+%}
