--- a/doc/main.tex
+++ b/doc/main.tex
@@ -2,19 +2,21 @@
  
 \usepackage{mystyle}
  
-\begin{document}
-
-\input{./tex/capa}
-\input{./tex/abstract}
-
 % Entrega:
 % 	Slides
 % 	Um resumo de DUAS páginas descrevendo o conteúdo do seminário
 %	Bibliografia utilizada
+ 
+\begin{document}
+
+\input{./tex/capa}
+%\input{./tex/abstract}
+
 \pagestyle{plain}
-\input{./tex/introduction}
-\input{./tex/definitions}
-\input{./tex/conclusions}
+\input{./tex/resumo}
+%\input{./tex/introduction}
+%\input{./tex/definitions}
+%\input{./tex/conclusions}
 
 \bibliographystyle{plain}
 \bibliography{bibliography.bib}
