--- a/doc/tex/capa.tex
+++ b/doc/tex/capa.tex
@@ -12,7 +12,7 @@
 \vspace{4.0cm}
 \noindent
 \begin{center}
-	{\Large \bf PR-OWL:\\ Language for Probabilistic Ontologies} \\[3cm]
+	{\Large \bf PR-OWL:\\ Probabilistic Web\\Ontology Language} \\[3cm]
 	{\Large Autor:}\\[6mm]
 	{\Large Walter Perez Urcia}\\[6mm]
 \end{center}
