solved some grammatical problems

--- a/slides/tex/ontology/problems.tex
+++ b/slides/tex/ontology/problems.tex
@@ -1,7 +1,7 @@
 \subsection{Problems}
 
 \begin{frame}{Problems}
-	On the Web exists \alert{uncertainty}.\\
+	There is \alert{uncertainty} on the Web.\\
 	\pause
 	Suppose we search:
 	\begin{block}{}
