--- a/slides/tex/probontology/representation.tex
+++ b/slides/tex/probontology/representation.tex
@@ -20,7 +20,7 @@
 			\pause
 			\item Hidden Markov Models
 			\begin{itemize}
-				\item They are a special case of Dyanmic BNs
+				\item They are a special case of Dynamic BNs
 				\item Capability for recursion
 			\end{itemize}
 		\end{itemize}
