--- a/doc/main.tex
+++ b/doc/main.tex
@@ -3,20 +3,24 @@
 \usepackage{mystyle}
  
 % Entrega:
-% 	Slides
-% 	Um resumo de DUAS páginas descrevendo o conteúdo do seminário
+% 	5 a 10 páginas
 %	Bibliografia utilizada
+
+% - Colocar referência para PR-OWL <---------------------------------
  
 \begin{document}
 
 \input{./tex/capa}
-%\input{./tex/abstract}
+\input{./tex/abstract}
 
 \pagestyle{plain}
-\input{./tex/resumo}
-%\input{./tex/introduction}
-%\input{./tex/definitions}
-%\input{./tex/conclusions}
+%\input{./tex/resumo}
+\input{./tex/introduction}
+\input{./tex/definitions}
+\input{./tex/representations}
+\input{./tex/pr_owl}
+\input{./tex/applications}
+\input{./tex/conclusions}
 
 \bibliographystyle{plain}
 \bibliography{bibliography.bib}
