--- a/doc/tex/introduction.tex
+++ b/doc/tex/introduction.tex
@@ -1,2 +1,31 @@
 \section{Introdução}
 \label{sec:introduction}
+
+O conceito da web semântica é uma ideia de Tim Berners-Lee: ``Web semântica é uma extensão da web comum em que a informação tem um melhor definido significado para os computadores e a cooperação das pessoas''~\cite{BernersLee01}. Em outras palavras, mudar a interconexão da web comum a um gigantesco banco de dados relacionado como é mostrado na Figura~\ref{fig:semantic_web}.
+
+\begin{figure}[H]
+	\centering
+	\begin{subfigure}{.45\textwidth}
+		\centering
+		\includegraphics[height=3cm]{images/documentweb}
+		%\caption{}
+	\end{subfigure}
+	\begin{subfigure}{.45\textwidth}
+		\centering
+		\includegraphics[height=3cm]{images/dataweb}
+		%\caption{}
+	\end{subfigure}
+	\caption{Ideia da web semântica}
+	\label{fig:semantic_web}
+\end{figure}
+
+O problema com aquela ideia de web semântica é que na web atual existem as seguintes situações:
+\begin{itemize}
+	\item Amplidão: Existem milhões de páginas
+	\item Não definição única de termos: Existem termos como alto e jovem que são subjetivos
+	\item Incerteza: Conceitos que tem incerteza, por exemplo sintomas de uma doença podem ser de alguma outra com outra probabilidade
+	\item Inconsistência: Existem contradições lógicas
+	\item Engano: A informação obtida não é sempre confiável
+\end{itemize}
+
+Ao longo deste trabalho, serão explicada a principal abordagem para a web semântica: ontologias, seus possíveis problemas e soluções para aqueles problemas. Finalmente, serão explicados alguns estudos feitos na área.
