--- a/doc/tex/abstract.tex
+++ b/doc/tex/abstract.tex
@@ -1,3 +1,3 @@
 \abstract{
-	Neste trabalho o objetivo foi desenvolver um jogador inteligente de Tetris usando heurísticas e buscas informadas e não informadas. Além disso, foi usado um conjunto de peças predefinida para fazer comparações entre as diferentes buscas em termos de ramificação, nós gerados e nós expandidos.
+	Neste trabalho o objetivo é explicar a linguagem PR-OWL desde seu origem até o tempo atual. O artigo começa descrevendo a aparição das ontologias na área e os problemas que tem e que levaram a criar um novo tipo de ontologias que usam probabilidades. Após isso, serão explicadas as diferentes representações que foram usadas para tentar solucionar aqueles problemas e finalmente mostrar a linguagem PR-OWL e suas aplicações.
 }
