--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -46,6 +46,12 @@
     year = {2010}
 }
 
+@misc{Prowl10,
+	title = {{PR-OWL Official Site},
+	howpublished = {\url{http://www.pr-owl.org}},
+	note = {Accessed: 2015-09-15}
+}
+
 %@article{ maxmin,
 %  author = {Ioannis Tsamardinos and Laura E. Brown and Constantin F. Aliferis},
 %  title = {The max-min hill-climbing {B}ayesian network structure learning algorithm},
