--- a/doc/main.tex
+++ b/doc/main.tex
@@ -2,12 +2,6 @@
  
 \usepackage{mystyle}
  
-% Entrega:
-% 	5 a 10 páginas
-%	Bibliografia utilizada
-
-% - Colocar referência para PR-OWL <---------------------------------
- 
 \begin{document}
 
 \input{./tex/capa}
@@ -16,8 +10,8 @@
 \pagestyle{plain}
 %\input{./tex/resumo}
 \input{./tex/introduction}
-\input{./tex/definitions}
-\input{./tex/representations}
+\input{./tex/ontology}
+\input{./tex/prob_ontology}
 \input{./tex/pr_owl}
 \input{./tex/applications}
 \input{./tex/conclusions}
