--- a/doc/mystyle.sty
+++ b/doc/mystyle.sty
@@ -8,6 +8,7 @@
 \usepackage{float}
 \usepackage{verbatim}
 \usepackage{multirow}
+\usepackage{url}
 \usepackage{color}
 \usepackage{tikz}
 \usetikzlibrary{arrows}
@@ -21,11 +22,11 @@
 	numbers=left,
 	numbersep=-10pt,
 	stepnumber=1,
-	tabsize=2,
+	tabsize=4,
 	showstringspaces=false,
 	escapechar=|
 }
-\renewcommand \lstlistingname{Bloco}
+\renewcommand \lstlistingname{Exemplo}
 
 \usepackage{a4}					% tamanho da página
 \setlength{\textwidth}{16.0cm}			% largura do texto
