--- a/doc/tex/introduction.tex
+++ b/doc/tex/introduction.tex
@@ -1,7 +1,7 @@
 \section{Introdução}
 \label{sec:introduction}
 
-O conceito da web semântica é uma ideia de Tim Berners-Lee: ``Web semântica é uma extensão da web comum em que a informação tem um melhor definido significado para os computadores e a cooperação das pessoas''~\cite{BernersLee01}. Em outras palavras, mudar a interconexão da web comum a um gigantesco banco de dados relacionado como é mostrado na Figura~\ref{fig:semantic_web}.
+O conceito da web semântica é uma ideia de Tim Berners-Lee: ``Web semântica é uma extensão da web comum em que a informação tem um melhor definido significado para os computadores e a cooperação das pessoas''~\cite{BernersLee01}. Em outras palavras, mudar a interconexão da web comum a um gigantesco banco de dados relacionado como é mostrado na Figura~\ref{fig:semantic_web} passando de uma abordagem orientada a arquivos (izquerda) a uma abordagem orientada a informação (direita).
 
 \begin{figure}[H]
 	\centering
@@ -28,4 +28,4 @@ O problema com aquela ideia de web semântica é que na web atual existem as seg
 	\item Engano: A informação obtida não é sempre confiável
 \end{itemize}
 
-Ao longo deste trabalho, serão explicada a principal abordagem para a web semântica: ontologias, seus possíveis problemas e soluções para aqueles problemas. Finalmente, serão explicados alguns estudos feitos na área.
+Ao longo deste trabalho, serão explicada a principal representação usada para a web semântica: ontologias, seus limitações e como aquele conceito foi extendido a ontologias probabilísticas para lidar com os desafios mencionados anteriormente. Finalmente, serão explicados alguns estudos feitos com aquele último conceito.
